--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase": "^8.7.1",
     "next": "10.x",
     "react": "17.x",
     "react-dom": "17.x"
   },
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
     "@types/react": "^17.0.14",
     "typescript": "^4.3.5"
   }
