--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.5",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "firebase": "^8.7.1",
+    "framer-motion": "^4",
     "next": "10.x",
     "react": "17.x",
     "react-dom": "17.x"
