--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "@chakra-ui/react": "^1.6.5",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "dayjs": "^1.10.6",
     "firebase": "^8.7.1",
     "framer-motion": "^4",
+    "js-cookie": "^2.2.1",
     "next": "10.x",
     "react": "17.x",
-    "react-dom": "17.x"
+    "react-dom": "17.x",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@types/firebase": "^3.2.1",
+    "@types/js-cookie": "^2.2.7",
     "@types/react": "^17.0.14",
+    "@types/react-icons": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
     "eslint": "^7.31.0",
